--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <p>I love to drink bubble tea</p>
   <p>I never fall asleep in class</p>
   <p>I play all sports</p>
+  <p>I love to play handball</p>
   <p>Knicks are gonna win the 2017 NBA Championship</p>
 </body>
 </html>
